--- a/package.json
+++ b/package.json
@@ -16,3 +16,16 @@
     "nodemon": "^3.0.2"
   }
 }
+{
+  "name": "explain-zone-backend",
+  "version": "1.0.0",
+  "main": "server.js",
+  "type": "module",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
+  }
+}
