--- a/package.json
+++ b/package.json
@@ -1,31 +1,17 @@
 {
   "name": "explain-zone-backend",
   "version": "1.0.0",
-  "description": "Backend for Explain Zone AI Studio",
+  "description": "Backend for Explain Zone app",
   "main": "server.js",
-  "type": "module",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.2"
-  }
-}
-{
-  "name": "explain-zone-backend",
-  "version": "1.0.0",
-  "main": "server.js",
-  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1"
   }
 }
